--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "karma": "^0.13.9",
     "karma-babel-preprocessor": "^5.2.2",
     "karma-chrome-launcher": "^0.2.0",
+    "karma-coverage": "^0.5.2",
     "karma-jasmine": "^0.3.6"
   }
 }
