--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "karma-babel-preprocessor": "^5.2.2",
     "karma-chrome-launcher": "^0.2.0",
     "karma-coverage": "^0.5.2",
-    "karma-jasmine": "^0.3.6"
+    "karma-jasmine": "^0.3.6",
+    "webpack": "^1.12.1"
   }
 }
