--- a/package.json
+++ b/package.json
@@ -27,14 +27,19 @@
   },
   "homepage": "https://github.com/RSRawat/wordpress-angular#readme",
   "devDependencies": {
+    "babel-core": "^5.8.24",
+    "babel-loader": "^5.3.2",
     "bower": "^1.5.2",
+    "bundle-loader": "^0.5.4",
     "gulp": "^3.9.0",
+    "gulp-util": "^3.0.6",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.9",
     "karma-babel-preprocessor": "^5.2.2",
     "karma-chrome-launcher": "^0.2.0",
     "karma-coverage": "^0.5.2",
     "karma-jasmine": "^0.3.6",
+    "ng-annotate-loader": "0.0.10",
     "webpack": "^1.12.1"
   }
 }
